--- a/index.html
+++ b/index.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-	<title>planet of the universe</title>
-</head>
-<body>
-<h1>planet of the universe</h1>
-</body>
-</html>
+---
+layout: default
+title: "Hashworks"
+---
